--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1217,10 +1217,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student</th>\n",
+       "      <th>Mathematics</th>\n",
+       "      <th>English</th>\n",
+       "      <th>Science</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ayush</td>\n",
+       "      <td>90</td>\n",
+       "      <td>50</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tarun</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rohit</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Muskan</td>\n",
+       "      <td>80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aman</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Student  Mathematics  English  Science\n",
+       "0   Ayush           90       50       90\n",
+       "1   Tarun          100       80       80\n",
+       "2   Rohit           90       60       70\n",
+       "3  Muskan           80       65       80\n",
+       "4    Aman           80       75        0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Student = ['Ayush', 'Tarun', 'Rohit', 'Muskan', 'Aman']\n",
+    "Mathematics = [90, 100, 90, 80, 80]\n",
+    "English = [50, 80, 60, 65, 75]\n",
+    "Science = [90, 80, 70, 80, 'NA']\n",
+    "df = pd.DataFrame({'Student':Student,\n",
+    "              'Mathematics':Mathematics,\n",
+    "              'English':English,\n",
+    "              'Science':Science})\n",
+    "df =df.replace('NA',0)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\shaur\\AppData\\Local\\Temp\\ipykernel_22208\\3988070775.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  row_means = df.replace(0, np.nan).mean(axis=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Student</th>\n",
+       "      <th>Mathematics</th>\n",
+       "      <th>English</th>\n",
+       "      <th>Science</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ayush</td>\n",
+       "      <td>90</td>\n",
+       "      <td>50</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tarun</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Rohit</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Muskan</td>\n",
+       "      <td>80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Aman</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>77.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index Student  Mathematics  English  Science\n",
+       "0      0   Ayush           90       50     90.0\n",
+       "1      1   Tarun          100       80     80.0\n",
+       "2      2   Rohit           90       60     70.0\n",
+       "3      3  Muskan           80       65     80.0\n",
+       "4      4    Aman           80       75     77.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_means = df.replace(0, np.nan).mean(axis=1)\n",
+    "df = df.where(df != 0, row_means, axis=0).reset_index()\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
@@ -1232,7 +1430,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1246,7 +1444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
